# kbju_back

./: Dockerfile  bc.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2acf2c9a8ea9_init.py
app/: __init__.py  database.py
app/models/: __init__.py  nutrition.py  user.py
app/routers/: barcode.py  user.py
app/schemas/: __init__.py  barcode.py  user.py
app/service/: barcode.py  user.py
app/views/: __init__.py  barcode.py  user.py
